Fix abi deployment in podman
TestDallas: ocp-4.18-vanilla-abi
Change-Id: I2dbeff499cc535140b6929a54e55affc0e203da5

--- a/dci-openshift-agent.yml
+++ b/dci-openshift-agent.yml
@@ -427,7 +427,7 @@
 
 # Step 3a-1 : installing
 - name: 'Launch ABI install'
-  hosts: localhost
+  hosts: jumphost
   tags:
     - running
     - installing
