Fix abi deployment in podman
TestDallas: ocp-4.18-vanilla-abi
Change-Id: I2dbeff499cc535140b6929a54e55affc0e203da5

--- a/plays/tests.yml
+++ b/plays/tests.yml
@@ -16,6 +16,9 @@
   ansible.builtin.include_role:
     name: redhatci.ocp.redhat_tests
 
+- name: "Debug pblanc"
+  ansible.builtin.shell: "ip a; podman login --get-login quay.io; cat /run/user/1000/containers/auth.json"
+
 - name: "Remove origin-tests image"
   containers.podman.podman_image:
     name: "quay.io/openshift/origin-tests"
