--- a/plays/after-install.yml
+++ b/plays/after-install.yml
@@ -1,6 +1,5 @@
 ---
 
-
 - name: "Get cluster install-config"
   kubernetes.core.k8s_info:
     api: v1
@@ -43,6 +42,8 @@
     mode: "0600"
 
 - name: "Upload cluster's files to DCI Control Server"
+  tags:
+    - dci
   environment:
     DCI_CLIENT_ID: "{{ dci_client_id }}"
     DCI_API_SECRET: "{{ dci_api_secret }}"
@@ -56,6 +57,7 @@
     - "{{ dci_cluster_configs_dir }}/kubeconfig"
     - "{{ dci_cluster_configs_dir }}/kubeadmin-password"
     - "{{ dci_cluster_configs_dir }}/cluster-install-config.yml"
+  delegate_to: localhost
 
 - name: "Check if all cluster-operators are running correctly"
   kubernetes.core.k8s_info:
@@ -129,6 +131,8 @@
 
 - name: "Create a DCI component for the rhcos_kernel"
   ignore_errors: true
+  tags:
+    - dci
   block:
     - name: "Create component with the rhcos kernel in use"
       vars:
@@ -145,6 +149,7 @@
         type: kernel
         state: present
       register: kernel_component
+      delegate_to: localhost
 
     - name: "Attach kernel component to the job"
       dci_job_component:
@@ -157,6 +162,7 @@
       when:
         - "'component' in kernel_component"
         - "'id' in kernel_component.component"
+      delegate_to: localhost
 
 - name: "Patch clusterversion update channel"
   vars:
@@ -224,6 +230,8 @@
     name: redhatci.ocp.ocp_add_users
 
 - name: "Upload additional credentials to DCI Control Server"
+  tags:
+    - dci
   environment:
     DCI_CLIENT_ID: "{{ dci_client_id }}"
     DCI_API_SECRET: "{{ dci_api_secret }}"
@@ -235,6 +243,7 @@
     mime: "text/plain"
   loop:
     - "{{ dci_cluster_configs_dir }}/ocp_creds.txt"
+  delegate_to: localhost
 
 - name: Set override fact for ACM hubs
   ansible.builtin.set_fact:
@@ -288,4 +297,5 @@
     - local_storage_devices | default([]) | length
     - enable_odf | bool
     - enable_lso | bool
+
 ...
