Add support to diff versions on clusterinstance spokes
Allows clusterinstance deployments to use different versions than the
hub through the configuration of the Agent Service Config, now available
in the collections through acm.utils role.

Change-Id: I47860c56b9782775cfb8dcfd2dac00aadf8a61d1

--- a/plays/acm-ztp-spoke-clusterinstance.yml
+++ b/plays/acm-ztp-spoke-clusterinstance.yml
@@ -35,6 +35,18 @@
     tasks_from: acm-pull-data.yml
   no_log: true
 
+- name: Configure Agent Service in disconnected mode
+  ansible.builtin.include_role:
+    name: redhatci.ocp.acm.utils
+    tasks_from: disconnect-agent
+  vars:
+    utils_registries: "{{ utils_acm_registries }}"
+    utils_ca_bundle: "{{ acm_user_ca_bundle }}"
+    utils_cm_name: mirror-registry-clusterinstance
+    utils_ocp_version: "{{ hostvars.jumphost.version }}"
+    utils_iso_url: "{{ hostvars.jumphost.acm_metal_iso_location }}"
+    utils_root_fs_url: "{{ hostvars.jumphost.acm_rootfs_url }}"
+
 - name: Create ns for the spoke ClusterInstance
   kubernetes.core.k8s:
     definition:
