--- a/plays/acm-ztp-spoke-clusterinstance.yml
+++ b/plays/acm-ztp-spoke-clusterinstance.yml
@@ -35,6 +35,20 @@
     tasks_from: acm-pull-data.yml
   no_log: true
 
+- name: Configure Agent Service in disconnected mode
+  ansible.builtin.include_role:
+    name: redhatci.ocp.acm.utils
+    tasks_from: disconnect-agent
+  vars:
+    utils_registries: "{{ utils_acm_registries }}"
+    utils_ca_bundle: "{{ acm_user_ca_bundle }}"
+    utils_cm_name: mirror-registry-clusterinstance
+    utils_ocp_version: "{{ acm_release_image }}"  
+    utils_iso_url: "{{ acm_metal_iso_location }}"
+    utils_root_fs_url: "{{ acm_rootfs_url }}"
+  when:
+    - dci_disconnected | default(false) | bool
+
 - name: Create ns for the spoke ClusterInstance
   kubernetes.core.k8s:
     definition:
