remove abi http ephemeral port from firewalld
when random ports are used for the http store
pod, the port is not removed from firewalld rules
this change addresses that to avoid accumulating
unused firewall rules. Using shell module because
firewalld module does not support removing rules,
only zones.

TestBos2: abi
Change-Id: I20a995baf0ccead6f708f02cc6203f25b358c9b0

--- a/plays/abi-install.yml
+++ b/plays/abi-install.yml
@@ -82,6 +82,20 @@
       when:
         - dci_ephemeral_http_store | default(true) | bool
 
+    - name: Remove http port, zone internal and public, for firewalld
+      vars:
+        http_port: "{{ http_store_port.stdout | default(hostvars['http_store']['http_port']) }}"
+      shell: |
+        set -x;
+        /usr/bin/firewall-cmd --remove-port={{ http_port }}/tcp --zone={{ item }}
+        /usr/bin/firewall-cmd --remove-port={{ http_port }}/tcp --permanent --zone={{ item }}
+      loop:
+        - internal
+        - public
+      become: true
+      when:
+        - dci_ephemeral_http_store | default (true) | bool
+
     - name: Fail configuring the http_store
       fail:
         msg: "http_store pod failed, cannot continue"
@@ -199,4 +213,19 @@
       delegate_to: http_store
       when:
         - dci_ephemeral_http_store | default(true) | bool
+
+    - name: "Remove http port, zone internal and public, for firewalld"
+      vars:
+        http_port: "{{ http_store_port.stdout | default(hostvars['http_store']['http_port']) }}"
+      shell: |
+        set -x;
+        /usr/bin/firewall-cmd --remove-port={{ http_port }}/tcp --zone={{ item }}
+        /usr/bin/firewall-cmd --remove-port={{ http_port }}/tcp --permanent --zone={{ item }}
+      loop:
+        - internal
+        - public
+      become: true
+      when:
+        - dci_ephemeral_http_store | default (true) | bool
+
 ...
