Revert "Separated operator deployment tasks"
This reverts commit eefe34cbe77d64c9ac82f773976e3a6c47838b66.

Reason for revert: Daily jobs are failing, the ocp_version variable is not defined on time for some tasks, e.g. Set facts for index fallback - Try up to 3 previous versions (in build-catalog play): https://www.distributed-ci.io/jobs/5678603b-87b3-4b9d-af55-e2d16ec1e1c4/jobStates?sort=date&task=6ad13c52-8f3e-4574-a094-a78701d73e05

TestDallas: ocp-4.12-vanilla

Change-Id: I20bba7169879c9f26370283c92b6dc2dd73c10c1

--- a/plays/apply-pao-profile.yml
+++ b/plays/apply-pao-profile.yml
@@ -1,4 +1,7 @@
 ---
+- name: "Get cluster facts"
+  include_tasks: get-cluster-facts.yml
+
 - name: Increase maxUnavailable workers
   include_tasks: increase_maxunavailable.yml
   when:
