Add dci-queue nested pool support
Change-Id: I8be3365d467a2a735aa594c452f5306e86a7985d

--- a/dci-openshift-agent.yml
+++ b/dci-openshift-agent.yml
@@ -222,6 +222,11 @@
           when:
             - (install_type | default('ipi')) == 'acm'
 
+        - name: Remove the nested resource from the dci-queue pool
+          shell: "dci-queue remove-resource {{ dci_queue_nested_pool }} {{ cluster }} 'install in progress' || :"
+          when:
+            - dci_queue_nested_pool is defined
+
       rescue: &teardown_error
         - name: Run the teardown error handler
           ignore_unreachable: true
