--- a/plays/pre-install.yml
+++ b/plays/pre-install.yml
@@ -168,7 +168,7 @@
 - name: "Set password for core user"
   ansible.builtin.include_tasks: set-console-pass.yml
   when:
-    - dci_console_pass | default("") | length > 0
+    - dci_core_user_pass | default("") | length > 0
     - customize_extramanifests_path is defined
     - (install_type | default('ipi')) in ['ipi']
 
