Set default for dci_extra_manifests
TestBos2: abi abi:ansible_skip_tags=operator-deployment

Change-Id: Ie827e0bb4f0a0c9f69616961dde6bb61ab00df51

--- a/plays/abi-install.yml
+++ b/plays/abi-install.yml
@@ -143,7 +143,7 @@
       vars:
         pull_secret: "{{ dci_pullsecret }}"
         repo_root_path: "{{ dci_cluster_configs_dir }}"
-        manifest_templates: "{{ hostvars.jumphost.dci_extra_manifests }}"
+        manifest_templates: "{{ hostvars.jumphost.dci_extra_manifests | default([]) }}"
       ansible.builtin.include_role:
         name: redhatci.ocp.generate_manifests
 
