Moving "Eject media" to agent-cleanup stage
Change-Id: I723c010d7dd935150e30880604a1c0c44c705f61

--- a/plays/abi-install.yml
+++ b/plays/abi-install.yml
@@ -217,6 +217,17 @@
         name: redhatci.ocp.monitor_agent_based_installer
 
   always:
+    - name: Eject Media
+      ansible.builtin.include_role:
+        name: "redhatci.ocp.vendors.{{ hostvars[target_host]['vendor'] | lower }}"
+        tasks_from: eject.yml
+      loop: "{{ groups['nodes'] | default([]) }}"
+      loop_control:
+        loop_var: target_host
+      when:
+        - "'vendor' in hostvars[target_host]"
+        - (install_type | default('ipi')) == 'abi'
+
     - name: "Remove http_store pod"
       environment:
         TMPDIR: ""
