--- a/plays/abi-install.yml
+++ b/plays/abi-install.yml
@@ -243,4 +243,18 @@
       when:
         - dci_ephemeral_http_store | default (true) | bool
 
+    - name: Eject Media
+      vars:
+        discovery_iso_name: "discovery/{{ cluster_name }}/discovery-image.iso"
+        discovery_iso_server: "http://{{ hostvars['http_store']['ansible_host'] }}"
+        boot_iso_url: "{{ discovery_iso_server }}:{{ http_store_port.stdout |
+                      default(hostvars['http_store']['http_port']) }}/{{ discovery_iso_name }}"      
+      ansible.builtin.include_role:
+        name: "redhatci.ocp.vendors.{{ hostvars[target_host]['vendor'] | lower }}"
+        tasks_from: eject.yml
+      loop: "{{ groups['nodes'] | default([]) }}"
+      loop_control:
+        loop_var: target_host
+      when:
+        - "'vendor' in hostvars[target_host]"
 ...
