[WIP] Add support to gitops + clusterinstance
Configure ArgoCD, render and copy templates to then track the target
branch in a CI manner.

Change-Id: Ic3f294be5962177fe1804a2a6a23fde85846534b

--- a/plays/acm-ztp-spoke-clusterinstance.yml
+++ b/plays/acm-ztp-spoke-clusterinstance.yml
@@ -12,6 +12,7 @@
 - name: Force deletion of Managed Cluster
   when:
     - dci_force_deploy_spoke | default(false) | bool
+    - not dci_use_gitops | default(false) | bool
   block:
     - name: Get previous ManagedCluster
       kubernetes.core.k8s_info:
@@ -58,15 +59,22 @@
         name: "{{ cluster_name }}"
     wait: true
 
-- name: Apply templates to create the spoke ClusterInstance
-  vars:
-    clusterinstance_namespace: "{{ cluster_name }}"
-  kubernetes.core.k8s:
-    state: present
-    template: "{{ item }}"
-    wait: true
-  with_fileglob:
-    - "{{ dci_clusterinstance_template_dir }}/{{ cluster_name }}-*.j2"
+- name: Deploy spoke using ClusterInstance
+  ansible.builtin.include_tasks:
+    file: acm-clusterinstance-install.yml
+  when:
+    - not dci_use_gitops | default(false) | bool
+    - dci_clusterinstance_template_dir | default('') | length > 0
+
+- name: Deploy the spoke using GitOps + ClusterInstance
+  ansible.builtin.include_tasks:
+    file: acm-gitops-install.yml
+  loop: "{{ dci_gitiops_apps | default([]) }}"
+  loop_control:
+    loop_var: app
+    label: "{{ app.name }}"
+  when:
+    - dci_use_gitops | default(false) | bool
 
 - name: Wait for the deployment to start
   kubernetes.core.k8s_info:
