--- a/plays/acm-ztp-spoke-clusterinstance.yml
+++ b/plays/acm-ztp-spoke-clusterinstance.yml
@@ -12,6 +12,7 @@
 - name: Force deletion of Managed Cluster
   when:
     - dci_force_deploy_spoke | default(false) | bool
+    - not dci_use_gitops | default(false) | bool
   block:
     - name: Get previous ManagedCluster
       kubernetes.core.k8s_info:
@@ -58,15 +59,38 @@
         name: "{{ cluster_name }}"
     wait: true
 
-- name: Apply templates to create the spoke ClusterInstance
-  vars:
-    clusterinstance_namespace: "{{ cluster_name }}"
-  kubernetes.core.k8s:
-    state: present
-    template: "{{ item }}"
-    wait: true
-  with_fileglob:
-    - "{{ dci_clusterinstance_template_dir }}/{{ cluster_name }}-*.j2"
+- name: Deploy spoke using ClusterInstance
+  ansible.builtin.include_tasks:
+    file: acm-clusterinstance-install.yml
+  when:
+    - not dci_use_gitops | default(false) | bool
+    - dci_clusterinstance_template_dir | default('') | length > 0
+
+- name: Deploy the spoke using GitOps + ClusterInstance
+  ansible.builtin.include_tasks:
+    file: acm-gitops-install.yml
+  loop: "{{ dci_gitiops_apps | default([]) }}"
+  loop_control:
+    loop_var: app
+    label: "{{ app.name }}"
+  when:
+    - dci_use_gitops | default(false) | bool
+
+#  dci_gitops_apps:
+#    - name: site1
+#      type: cluster
+#      project: sites
+#      force: true # Remove previous resources
+#      teardown: true # default false
+#      namespace: site1
+#      source_repo: git@github.com:path.to.gitops.repo.git
+#      target_repo: git@github.com:path.to.gitops.repo.git
+#      source_path: source/site-config
+#      target_path: target/site-config
+#      source_branch: main
+#      target_branch: rendered
+#      target_repo_key: "/home/dci/.ssh/id_dcibot"
+#      source_repo_key: "/home/dci/.ssh/id_dcibot"
 
 - name: Wait for the deployment to start
   kubernetes.core.k8s_info:
