Allow apply manifests before creating a spoke cluster
Allow to create resources in a Hub cluster before creating a spoke. Ie: secret, pull_secrets, etc.

TestBos2: abi
Change-Id: I4ca7e7d909283e42ce6f9690c9fb86ba46ad9aae

--- a/plays/acm-install.yml
+++ b/plays/acm-install.yml
@@ -1,4 +1,11 @@
 ---
+- name: "Apply manifests for the spoke on the Hub"
+  kubernetes.core.k8s:
+    state: present
+    src: "{{ item }}"
+  loop: "{{ dci_spoke_manifest_files | default([]) }}"
+  when: (dci_spoke_manifest_files | default([])) | length > 0
+
 - name: Deploy a ZTP spoke cluster with SiteConf Operator
   ansible.builtin.include_tasks:
     file: acm-ztp-spoke-clusterinstance.yml
