Reactivating rhcos_kernel component attachment
TestDallas: ocp-4.18-vanilla

Change-Id: Ibb6d9966749a99d830573f254370c55ae6068d30

--- a/plays/after-install.yml
+++ b/plays/after-install.yml
@@ -157,6 +157,7 @@
       when:
         - "'component' in kernel_component"
         - "'id' in kernel_component.component"
+  delegate_to: localhost
 
 - name: "Patch clusterversion update channel"
   vars:
