--- a/plays/after-install.yml
+++ b/plays/after-install.yml
@@ -61,14 +61,20 @@
   kubernetes.core.k8s_info:
     kind: ClusterOperator
   register: clusteroperator_info
-  vars:
-    status_query: "resources[*].status.conditions[?type=='Available'].status"
-    cluster_operators_available: "{{ clusteroperator_info | json_query(status_query) | flatten | unique }}"
+  until:
+    - clusteroperator_info is defined
+    - clusteroperator_info.resources is defined
+    - (
+      clusteroperator_info.resources
+      | map(attribute='status.conditions')
+      | map('selectattr', 'type', 'equalto', 'Available')
+      | map('map', attribute='status')
+      | list
+      ) | select('equalto', 'True') | list | length
+      == (clusteroperator_info.resources | length)
   retries: 15
   delay: 10
-  until: cluster_operators_available == ['True']
-  when:
-    - acm_cluster_type | default('') != 'hypershift'
+  when: acm_cluster_type | default('') != 'hypershift'
 
 - name: "Check all nodes have been provisioned"
   vars:
