Fix cluster operatos validator
Validate that resources exists

TestBos2: abi
Change-Id: Iecb87793c93342df466c4f60f5067126dbce6c04

--- a/plays/after-install.yml
+++ b/plays/after-install.yml
@@ -66,7 +66,10 @@
     cluster_operators_available: "{{ clusteroperator_info | json_query(status_query) | flatten | unique }}"
   retries: 15
   delay: 10
-  until: cluster_operators_available == ['True']
+  until:
+    - clusteroperator_info.resources is defined
+    - clusteroperator_info.resources | length > 0
+    - cluster_operators_available == ['True']
   when:
     - acm_cluster_type | default('') != 'hypershift'
 
