container: add components for git repos in /usr/src
Add dci components for all git repositories inside the /usr/src directory when job is executed inside a podman container.

TestBos2Sno: sno
Change-Id: I8307bedb749674dd974d22c1dc083c109192cd4f

--- a/plays/pre-run.yml
+++ b/plays/pre-run.yml
@@ -34,6 +34,19 @@
         - file_stat is defined
         - file_stat.stat.exists
 
+- name: Include source as components when using container
+  when: run_in_container | default(false) | bool
+  block:
+    - name: Get /usr/src directories
+      find:
+        paths: /usr/src
+        file_type: directory
+        register: output
+    - name: Track src git found
+      ansible.builtin.include_tasks: track_dev_git_repo.yml
+      loop: "{{ output.files }}"
+      when: output.files is defined
+
 - name: Include installed software as components
   vars:
     mandatory_rpms:
