--- a/plays/pre-install.yml
+++ b/plays/pre-install.yml
@@ -47,6 +47,17 @@
   delegate_to: localhost
   delegate_facts: true
 
+- name: Check if localhost is a container
+  block:
+    - name: Get /run/.containerenv file status
+      ansible.builtin.stat:
+        path: /run/.containerenv
+      register: containerenv
+    - name: Set run_in_container fact
+      ansible.builtin.set_fact:
+        run_in_container: true
+      when: containerenv.stat.exists
+
 - name: "Mirror operators from directory"
   ansible.builtin.include_role:
     name: redhatci.ocp.mirror_from_directory
