--- a/plays/pre-run.yml
+++ b/plays/pre-run.yml
@@ -34,6 +34,14 @@
         - file_stat is defined
         - file_stat.stat.exists
 
+- name: Include sources as components when using container
+  ansible.builtin.find:
+    paths: /usr/src
+    file_type: directory
+  register: dci_srcs_to_components
+  delegate_to: localhost
+  when: hostvars.localhost.run_in_container | default(false) | bool
+
 - name: Include installed software as components
   vars:
     mandatory_rpms:
@@ -46,7 +54,9 @@
       - python3-kubernetes
       - python3-openshift
     ic_rpms: "{{ (dci_rpms_to_components + mandatory_rpms)|flatten }}"
-    ic_gits: "{{ dci_gits_to_components|flatten }}"
+    ic_gits: >-
+      {{ (dci_gits_to_components +
+         (dci_srcs_to_components.files | default([]) | map(attribute='path'))) | flatten }}
     ic_dev_gits: "{{ dev_gits_to_components|flatten }}"
   ansible.builtin.include_role:
     name: redhatci.ocp.include_components
