--- a/plays/acm-ztp-spoke.yml
+++ b/plays/acm-ztp-spoke.yml
@@ -30,6 +30,7 @@
         asm_action: "delete-ztp-by-ref"
         asm_source_repo: "{{ dci_gitops_sites_repo.url }}"
         asm_target_revision: "{{ dci_gitops_sites_repo.branch }}"
+        asm_cluster_name: "{{ cluster }}"
       ansible.builtin.include_role:
         name: redhatci.ocp.acm_spoke_mgmt
         apply:
