--- a/dci-openshift-agent.yml
+++ b/dci-openshift-agent.yml
@@ -343,35 +343,37 @@
       rescue: *teardown_error
 
 # Step 3a-1 : installing
-- name: 'Launch [IPI/SNO/UPI] install'
-  hosts: provisioner
+- name: 'Custom install Hooks'
+  hosts: jumphost
   tags:
     - running
-    - installing
+    - custom-install
   environment:
     http_proxy: "{{ http_proxy }}"
     https_proxy: "{{ https_proxy }}"
     no_proxy: "{{ no_proxy_list }}"
+    KUBECONFIG: "{{ hub_kubeconfig_path | default('') }}"
   tasks:
-    - name: Install IPI/SNO/UPI
+    - name: Custom install
       when:
         - dci_main == 'install'
+      loop: "{{ dci_config_dirs }}"
+      loop_control:
+        loop_var: hookdir
       block:
-        - name: Launch install {{ (install_type | default('ipi'))}}
-          ansible.builtin.include_tasks: "plays/{{ (install_type | default('ipi')) }}-install.yml"
-          when:
-            - (install_type | default('ipi')) in ['ipi', 'upi', 'sno']
+        - name: Verify custom install hook
+          ansible.builtin.stat:
+            file: '{{ hookdir }}/hooks/custom-install.yml'
+          register: _custom_install_hook
 
-        - name: "Get KUBECONFIG auth/creds from provisioner node"
-          ansible.builtin.fetch:
-            src: "{{ item }}"
-            dest: "{{ dci_cluster_configs_dir }}/"
-            flat: true
-          loop:
-            - "{{ dir }}/auth/kubeconfig"
-            - "{{ dir }}/auth/kubeadmin-password"
+        - name: Set custom install var
+          ansible.builtin.set_fact:
+            custom_install_hook: '{{ _custom_install_hook.stat.exists }}'
+
+        - name: Custom Install Hooks
+          ansible.builtin.include_tasks: '{{ hookdir }}/hooks/custom-install.yml'
           when:
-            - (install_type | default('ipi')) in ['ipi', 'upi', 'sno']
+            - custom_install_hook
 
       rescue: &teardown_failure
         - name: Run the teardown failure handler
@@ -418,6 +420,39 @@
               include_tasks: plays/agent-cleanup.yml
 
 # Step 3a-1 : installing
+- name: 'Launch [IPI/SNO/UPI] install'
+  hosts: provisioner
+  tags:
+    - running
+    - installing
+  environment:
+    http_proxy: "{{ http_proxy }}"
+    https_proxy: "{{ https_proxy }}"
+    no_proxy: "{{ no_proxy_list }}"
+  tasks:
+    - name: Install IPI/SNO/UPI
+      when:
+        - dci_main == 'install'
+        - not custom_install_hook | default(false) | bool
+      block:
+        - name: Launch install {{ (install_type | default('ipi'))}}
+          ansible.builtin.include_tasks: "plays/{{ (install_type | default('ipi')) }}-install.yml"
+          when:
+            - (install_type | default('ipi')) in ['ipi', 'upi', 'sno']
+
+        - name: "Get KUBECONFIG auth/creds from provisioner node"
+          ansible.builtin.fetch:
+            src: "{{ item }}"
+            dest: "{{ dci_cluster_configs_dir }}/"
+            flat: true
+          loop:
+            - "{{ dir }}/auth/kubeconfig"
+            - "{{ dir }}/auth/kubeadmin-password"
+          when:
+            - (install_type | default('ipi')) in ['ipi', 'upi', 'sno']
+      rescue: *teardown_failure
+
+# Step 3a-1 : installing
 - name: 'Launch ACM install'
   hosts: jumphost
   tags:
@@ -442,6 +477,7 @@
           when:
             - (install_type | default('ipi')) == 'acm'
             - dci_main == 'install'
+            - not custom_install_hook | default(false) | bool
       rescue: *teardown_failure
 
 # Step 3a-1 : installing
@@ -466,6 +502,7 @@
           when:
             - (install_type | default('ipi')) == 'abi'
             - dci_main == 'install'
+            - not custom_install_hook | default(false) | bool
       rescue: *teardown_failure
 
 # Step 3a-1 : installing
