--- a/plays/after-install.yml
+++ b/plays/after-install.yml
@@ -323,4 +323,24 @@
     - ocs_install_type is defined
     - ocs_install_type == 'internal'
     - local_storage_devices | default([]) | length
+
+- name: Validate ACM policies
+  environment:
+    KUBECONFIG: "{{ hub_kubeconfig_path }}"
+  when:
+    - install_type | default('ipi') == 'acm'
+    - hub_kubeconfig_path | default('') | length > 0
+  block:
+    - name: Check if the Policy CRD exists
+      kubernetes.core.k8s_info:
+        api_version: apiextensions.k8s.io/v1
+        kind: CustomResourceDefinition
+        name: policies.policy.open-cluster-management.io
+      register: policy_crd_info
+      no_log: true
+
+    - name: Validate ACM policies
+      ansible.builtin.include_tasks:
+        file: validate-acm-policies.yml
+      when: policy_crd_info.resources | length > 0
 ...
