Validate ACM policies
Change-Id: I58806d45db0da9b207119e834fa9b2252282ea99

--- a/plays/tests.yml
+++ b/plays/tests.yml
@@ -55,4 +55,24 @@
     name: redhatci.ocp.cluster_compare
   when:
     - dci_cluster_compare | default(false) | bool
+
+- name: Validate ACM policies
+  environment:
+    KUBECONFIG: "{{ hub_kubeconfig_path }}"
+  when:
+    - install_type | default('ipi') == 'acm'
+    - hub_kubeconfig_path | default('') | length > 0
+  block:
+    - name: Check if the Policy CRD exists
+      kubernetes.core.k8s_info:
+        api_version: apiextensions.k8s.io/v1
+        kind: CustomResourceDefinition
+        name: policies.policy.open-cluster-management.io
+      register: policy_crd_info
+      no_log: true
+
+    - name: Validate ACM policies
+      ansible.builtin.include_tasks:
+        file: validate-acm-policies.yml
+      when: policy_crd_info.resources | length > 0
 ...
