--- a/plays/sno-install.yml
+++ b/plays/sno-install.yml
@@ -7,12 +7,14 @@
     name: redhatci.ocp.sno_node_prep
   vars:
     sno_pullsecret_file: "{{ hostvars['jumphost']['dci_pullsecret_file'] }}"
+    disconnected_registry_mirrors_file: "{{ dci_cluster_configs_dir }}/trust-bundle.yml"
 
 - name: "installer : SNO Run IPI installer"
   import_role:
     name: redhatci.ocp.sno_installer
   vars:
     pull_url: "{{ hostvars.jumphost.version_pull_url }}"
+    disconnected_registry_mirrors_file: "{{ dci_cluster_configs_dir }}/trust-bundle.yml"
 
 - name: "installer : SNO sideload-kernel"
   when:
