--- a/plays/pre-run.yml
+++ b/plays/pre-run.yml
@@ -52,4 +52,12 @@
     name: redhatci.ocp.include_components
     apply:
       delegate_to: localhost
+
+- name: Override disconnected_registry_mirrors_file in the registry host
+  ansible.builtin.set_fact:
+    disconnected_registry_mirrors_file: "{{ dci_cluster_configs_dir }}/trust-bundle.yml"
+  delegate_facts: true
+  delegate_to: "{{ groups['registry_host'][0] if 'registry_host' in groups else 'registry_host' }}"
+  when:
+    - dci_disconnected | default(false) | bool
 ...
