Fix SNO disconnected installations using empty trust-bundle file
When deploying SNO clusters in disconnected environments, the
sno_installer role was receiving the original
disconnected_registry_mirrors_file instead of the processed
trust-bundle.yml file that contains populated
ImageContentSources/ImageDigestSources for the OCP release.

The trust-bundle processing happens in pre-install.yml:
1. Copies base file to {{ dci_cluster_configs_dir }}/trust-bundle.yml
2. Renames imageContentSources to imageDigestSources for OCP 4.14+
3. Populates with image mirrors from the OCP release

However, SNO installations were missing the variable override that
points disconnected_registry_mirrors_file to the processed file,
causing the installer to use the empty base file.

Changes:
- Add disconnected_registry_mirrors_file override in pre-run.yml to
  point to the processed trust-bundle.yml for all installation types
- Remove duplicate override task from ipi-install.yml since it's now
  handled centrally in pre-run.yml

This fix ensures all installation types (SNO, IPI, etc.) consistently
use the populated trust-bundle file in disconnected environments.

TestDallas: ocp-4.18-vanilla
Change-Id: I7d369dc365e162b4bcf654f7e725db1ff343de48

--- a/plays/pre-install.yml
+++ b/plays/pre-install.yml
@@ -5,11 +5,15 @@
       - webserver_url is defined
       - groups['registry_host'] is defined
       - groups['registry_host'] | length > 0
-      - dci_local_registry | length
+      - dci_local_registry is defined
       - provision_cache_store is defined
   when:
     - dci_disconnected | default(false) | bool
     - (install_type | default('ipi')) not in ['abi']
+
+- name: Get type of dci_local_registry
+  debug:
+    msg: "dci_local_registry is of value '{{ dci_local_registry }}' and type '{{ dci_local_registry | type_debug }}'"
 
 - name: Validate we have all the pieces to run ABI in disconnected mode
   ansible.builtin.assert:
