--- a/dci-openshift-agent.yml
+++ b/dci-openshift-agent.yml
@@ -492,7 +492,7 @@
 
 # Step 3a-1 : installing
 - name: 'Launch ABI install'
-  hosts: jumphost
+  hosts: localhost
   tags:
     - running
     - installing
