--- a/plays/tests.yml
+++ b/plays/tests.yml
@@ -26,6 +26,12 @@
   when:
     - cnf_test_suites is defined
     - cnf_test_suites | length
+ 
+- name: Run eco-gotests
+  ansible.builtin.include_tasks: eco-gotests-run.yml
+  when:
+    - eco_test_suites is defined
+    - eco_test_suites | length
 
 - name: Run cluster-compare
   vars:
