--- a/plays/post-run.yml
+++ b/plays/post-run.yml
@@ -34,4 +34,27 @@
       ansible.builtin.shell: "dci-diff-jobs --job_id_1 {{ job_id }} > {{ job_logs.path }}/diff-jobs.txt"
       ignore_errors: true
 
+- name: Save job info in the cluster
+  when: dci_cluster_metadata | default(true) | bool
+  block:
+    - name: Create DCI namespace
+      kubernetes.core.k8s:
+        state: present
+        definition:
+          apiVersion: v1
+          kind: Namespace
+          metadata:
+            name: openshift-dci
+
+    - name: Create DCI configmap
+      kubernetes.core.k8s:
+        state: present
+        definition:
+          apiVersion: v1
+          kind: ConfigMap
+          metadata:
+            name: "doa-{{ ansible_date_time.epoch }}"
+            namespace: openshift-dci
+          data:
+            job_info: "{{ job_info | redhatci.ocp.redact | to_json }}"
 ...
