Pass http_store IP to role for container to listen on
TestBos2Sno: abi-sno
Change-Id: Iba54a1f4b24535c4f9d39c2ef521e3e1cab39391

--- a/plays/abi-install.yml
+++ b/plays/abi-install.yml
@@ -55,6 +55,7 @@
         http_store_pod_name: "{{ store_pod_name }}"
         http_store_ephemeral: "{{ dci_ephemeral_http_store | default (true) }}"
         http_port: "{{ http_store_port.stdout | default(hostvars['http_store']['http_port']) }}"
+        http_store_ip: "{{ hostvars['http_store']['ansible_host'] }}"
       ansible.builtin.include_role:
         name: redhatci.ocp.setup_http_store
         apply:
